resources/operator_1.2/k8s/admission.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: couchbase-operator-admission-karthiks
spec:
  replicas: 1
  selector:
    matchLabels:
      app: couchbase-operator-admission-karthiks
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: couchbase-operator-admission-karthiks
    spec:
      containers:
      - args:
        - --logtostderr
        - --stderrthreshold
        - "0"
        - --tls-cert-file
        - /var/run/secrets/couchbase.com/couchbase-operator-admission/tls-cert-file
        - --tls-private-key-file
        - /var/run/secrets/couchbase.com/couchbase-operator-admission/tls-private-key-file
        command:
        - couchbase-operator-admission
        image: couchbase/admission-controller:1.2.1
        name: couchbase-operator-admission-karthiks
        ports:
        - containerPort: 8443
          name: https
        resources: {}
        volumeMounts:
        - mountPath: /var/run/secrets/couchbase.com/couchbase-operator-admission
          name: couchbase-operator-admission-karthiks
          readOnly: true
      serviceAccountName: couchbase-operator-admission-karthiks
      volumes:
      - name: couchbase-operator-admission-karthiks
        secret:
          secretName: couchbase-operator-admission
status: {}

---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: couchbase-operator-admission-karthiks
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app: couchbase-operator-admission-karthiks
status:
  loadBalancer: {}

---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: couchbase-operator-admission-karthiks
webhooks:
- clientConfig:
    caBundle: Q2VydGlmaWNhdGU6CiAgICBEYXRhOgogICAgICAgIFZlcnNpb246IDMgKDB4MikKICAgICAgICBTZXJpYWwgTnVtYmVyOgogICAgICAgICAgICBlYTpkOTo3NzpkYTo1MzoyMzo3YTo4YjozYjowMDpiNDphYzo4ZDpmMDo5OTpjZgogICAgU2lnbmF0dXJlIEFsZ29yaXRobTogc2hhMjU2V2l0aFJTQUVuY3J5cHRpb24KICAgICAgICBJc3N1ZXI6IENOPUNvdWNoYmFzZSBDQQogICAgICAgIFZhbGlkaXR5CiAgICAgICAgICAgIE5vdCBCZWZvcmU6IE1heSAgNiAxMDoxMzoxNiAyMDIwIEdNVAogICAgICAgICAgICBOb3QgQWZ0ZXIgOiBBdWcgIDkgMTA6MTM6MTYgMjAyMiBHTVQKICAgICAgICBTdWJqZWN0OiBDTj1jb3VjaGJhc2Utc2VydmVyCi [...]
    service:
      name: couchbase-operator-admission-karthiks
      namespace: karthiks
      path: /couchbaseclusters/mutate
  name: couchbase-operator-admission-karthiks.karthiks.svc
  rules:
  - apiGroups:
    - couchbase.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - couchbaseclusters

---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: couchbase-operator-admission-karthiks
webhooks:
- clientConfig:
    caBundle: Q2VydGlmaWNhdGU6CiAgICBEYXRhOgogICAgICAgIFZlcnNpb246IDMgKDB4MikKICAgICAgICBTZXJpYWwgTnVtYmVyOgogICAgICAgICAgICBlYTpkOTo3NzpkYTo1MzoyMzo3YTo4YjozYjowMDpiNDphYzo4ZDpmMDo5OTpjZgogICAgU2lnbmF0dXJlIEFsZ29yaXRobTogc2hhMjU2V2l0aFJTQUVuY3J5cHRpb24KICAgICAgICBJc3N1ZXI6IENOPUNvdWNoYmFzZSBDQQogICAgICAgIFZhbGlkaXR5CiAgICAgICAgICAgIE5vdCBCZWZvcmU6IE1heSAgNiAxMDoxMzoxNiAyMDIwIEdNVAogICAgICAgICAgICBOb3QgQWZ0ZXIgOiBBdWcgIDkgMTA6MTM6MTYgMjAyMiBHTVQKICAgICAgICBTdWJqZWN0OiBDTj1jb3VjaGJhc2Utc2VydmVyCi [...]
    service:
      name: couchbase-operator-admission-karthiks
      namespace: karthiks
      path: /couchbaseclusters/validate
  name: couchbase-operator-admission-karthiks.karthiks.svc
  rules:
  - apiGroups:
    - couchbase.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - couchbaseclusters
